--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import 'colors';
+@import 'variables';
 
 html {
     box-sizing: border-box;
@@ -35,6 +36,7 @@ body {
     font-size: 1.6rem;
     margin: 0;
     height: 100vh;
+    font-family: $main-font;
 }
 
 #root {
