--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -11,10 +11,10 @@
     }
 }
 
-@mixin hover-zoom {
+@mixin hover-zoom($zoom: 1.03) {
     transition: transform 0.15s ease-in 0s;
     &:hover {
-        transform: scale(1.03);
+        transform: scale($zoom);
         transition: transform 0.15s ease-in 0s;
     }
 }
