--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -1,7 +1,35 @@
+@import 'main';
+
 .landing {
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    header {
+        display: flex;
+        justify-content: end;
+    }
+    main {
+        flex-grow: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+.user-profile__avatar-container {
+    height: 4rem;
+    width: 4rem;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    background-color: rgba($color: $secondary-color, $alpha: 0.3);
+    border-radius: 50%;
+    @include hover-zoom();
+}
+
+.user-profile__avatar {
+    cursor: pointer;
+    height: 3.6rem !important;
+    width: 3.6rem !important;
 }
